--- a/maink500.ipynb
+++ b/maink500.ipynb
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +38,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Url Base\n",
-    "url = 'https://leitespc.blogspot.com/'"
+    "url_raiz = 'https://leitespc.blogspot.com/'\n",
+    "for i in range(2006, 2020):\n",
+    "    ano = i\n",
+    "    for j in range(1, 12):\n",
+    "        url = url_raiz+str(ano)+'/'+str(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
