--- a/maink500.ipynb
+++ b/maink500.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
    "source": [
     "# Url Base\n",
     "url_raiz = 'https://leitespc.blogspot.com/'\n",
-    "for i in range(2006, 2020):\n",
+    "for i in range(2006, 2022):\n",
     "    ano = i\n",
     "    for j in range(1, 12):\n",
     "        url = url_raiz+str(ano)+'/'+str(j)\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 2
     }
    ],
    "source": [
@@ -89,9 +89,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'2020'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
    "source": [
     "#year = html_soup.find_all('a', href=True)\n",
     "year1 = html_soup.findAll('a')[28].get_text()\n",
@@ -101,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'2019'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
    "source": [
     "#year = html_soup.find_all('a', href=True)\n",
     "year2 = html_soup.findAll('a')[29].get_text()\n",
@@ -113,26 +135,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-a010110a7e52>, line 2)",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-a010110a7e52>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    print link.get('href')\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "https://www.blogger.com/static/v1/widgets/3416767676-css_bundle_v2.css\nhttps://leitespc.blogspot.com/favicon.ico\nhttps://leitespc.blogspot.com/\nhttps://leitespc.blogspot.com/feeds/posts/default\nhttps://leitespc.blogspot.com/feeds/posts/default?alt=rss\nhttps://www.blogger.com/feeds/2538168105662606801/posts/default\nhttps://www.blogger.com/profile/12017586233932277675\nhttps://www.blogger.com/dyn-css/authorization.css?targetBlogID=2538168105662606801&zx=25763a0a-fd19-48d2-88ab-76d4e52325ed\nhttps://www.blogger.com/dyn-css/authorization.css?targetBlogID=2538168105662606801&zx=25763a0a-fd19-48d2-88ab-76d4e52325ed\nhttps://leitespc.blogspot.com/2021/01/lista-das-500-da-kissfm-20202021.html\nhttps://leitespc.blogspot.com/2021/01/lista-das-500-da-kissfm-20202021.html\nhttps://www.blogger.com/comment.g?blogID=2538168105662606801&postID=4576920015812874121\nhttps://www.blogger.com/email-post.g?blogID=2538168105662606801&postID=4576920015812874121\nhttps://www.blogger.com/post-edit.g?blogID=2538168105662606801&postID=4576920015812874121&from=pencil\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4576920015812874121&target=email\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4576920015812874121&target=blog\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4576920015812874121&target=twitter\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4576920015812874121&target=facebook\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4576920015812874121&target=pinterest\nhttps://leitespc.blogspot.com/2020/01/lista-das-500-da-kissfm-20192020.html\nhttps://leitespc.blogspot.com/2020/01/lista-das-500-da-kissfm-20192020.html\nhttps://www.blogger.com/comment.g?blogID=2538168105662606801&postID=4862374412745860890\nhttps://www.blogger.com/email-post.g?blogID=2538168105662606801&postID=4862374412745860890\nhttps://www.blogger.com/post-edit.g?blogID=2538168105662606801&postID=4862374412745860890&from=pencil\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4862374412745860890&target=email\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4862374412745860890&target=blog\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4862374412745860890&target=twitter\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4862374412745860890&target=facebook\nhttps://www.blogger.com/share-post.g?blogID=2538168105662606801&postID=4862374412745860890&target=pinterest\nhttps://leitespc.blogspot.com/search?updated-max=2020-01-09T10:18:00-03:00&max-results=11\nhttps://leitespc.blogspot.com/\nhttps://leitespc.blogspot.com/feeds/posts/default\nhttps://leitespc.blogspot.com/2021/01/lista-das-500-da-kissfm-20202021.html\nhttps://leitespc.blogspot.com/2021/01/lista-das-500-da-kissfm-20202021.html\nhttps://leitespc.blogspot.com/2020/01/lista-das-500-da-kissfm-20192020.html\nhttps://leitespc.blogspot.com/\nhttps://www.blogger.com/profile/12017586233932277675\nhttps://www.blogger.com/profile/12017586233932277675\nhttps://www.blogger.com/profile/12017586233932277675\nhttps://leitespc.blogspot.com/2007/06/\nhttps://leitespc.blogspot.com/2008/12/\nhttps://leitespc.blogspot.com/2009/01/\nhttps://leitespc.blogspot.com/2010/01/\nhttps://leitespc.blogspot.com/2011/01/\nhttps://leitespc.blogspot.com/2012/01/\nhttps://leitespc.blogspot.com/2013/01/\nhttps://leitespc.blogspot.com/2014/01/\nhttps://leitespc.blogspot.com/2015/10/\nhttps://leitespc.blogspot.com/2016/12/\nhttps://leitespc.blogspot.com/2017/05/\nhttps://leitespc.blogspot.com/2018/09/\nhttps://leitespc.blogspot.com/2019/10/\nhttps://leitespc.blogspot.com/2020/01/\nhttps://leitespc.blogspot.com/2021/01/\nhttps://www.blogger.com/go/report-abuse\nhttps://www.blogger.com\n"
      ]
     }
    ],
    "source": [
-    "for link in html_soup.find_all('a', attrs={'href': re.compile(\"^http://\")}):\n",
-    "    print link.get('href')"
+    "find_a = html_soup.find_all(href=True)\n",
+    "href_filter=[]\n",
+    "for x in find_a:\n",
+    "    href_filter.append(x['href'])\n",
+    "    print(x['href'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +229,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 21
+     "execution_count": 6
     }
    ],
    "source": [
@@ -281,10 +305,76 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'https://leitespc.blogspot.com/2007/06',\n",
+       " 'https://leitespc.blogspot.com/2008/12',\n",
+       " 'https://leitespc.blogspot.com/2009/01',\n",
+       " 'https://leitespc.blogspot.com/2010/01',\n",
+       " 'https://leitespc.blogspot.com/2011/01',\n",
+       " 'https://leitespc.blogspot.com/2012/01',\n",
+       " 'https://leitespc.blogspot.com/2013/01',\n",
+       " 'https://leitespc.blogspot.com/2014/01',\n",
+       " 'https://leitespc.blogspot.com/2015/10',\n",
+       " 'https://leitespc.blogspot.com/2016/12',\n",
+       " 'https://leitespc.blogspot.com/2017/05',\n",
+       " 'https://leitespc.blogspot.com/2018/09',\n",
+       " 'https://leitespc.blogspot.com/2019/10',\n",
+       " 'https://leitespc.blogspot.com/2020/01',\n",
+       " 'https://leitespc.blogspot.com/2021/01'}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 53
+    }
+   ],
+   "source": [
+    "href_filter1 = re.findall(r'https://leitespc.blogspot.com/..../..', str(href_filter))\n",
+    "set(href_filter1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "2007 = []\n",
+    "2008 = []\n",
+    "2009 = []\n",
+    "2010 = []\n",
+    "2011 = []\n",
+    "2012 = []\n",
+    "2013 = []\n",
+    "2014 = []\n",
+    "2015 = []\n",
+    "2016 = []\n",
+    "2017 = []\n",
+    "2018 = []\n",
+    "2019 = []\n",
+    "2020 = []\n",
+    "2021 = []\n",
+    "\n",
+    "for y in href_filter1:\n",
+    "    soup = BeautifulSoup(y.text, 'html.parser')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_html(year):\n",
+    "    for y in href_filter1:\n",
+    "         if y =="
+   ]
   }
  ],
  "metadata": {
